tests/fixtures/invalid/void_global_object.c
void value;
int main(void) { return 0; }
